--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,10 +24,12 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  dio: ^4.0.0
+  json_annotation: ^4.0.1
+  shared_preferences: ^2.0.6
 
 dev_dependencies:
   flutter_test:
