--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   dio: ^4.0.0
+  http: ^0.13.3
   json_annotation: ^4.0.1
   shared_preferences: ^2.0.6
 
