--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   http: ^0.13.3
   json_annotation: ^4.0.1
   shared_preferences: ^2.0.6
+  fluttertoast: ^8.0.8
 
 dev_dependencies:
   flutter_test:
