--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   json_annotation: ^4.0.1
   shared_preferences: ^2.0.6
   fluttertoast: ^8.0.8
+  underline_indicator: ^0.0.4
 
 dev_dependencies:
   flutter_test:
