--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,11 @@ dependencies:
   shared_preferences: ^2.0.6
   fluttertoast: ^8.0.8
   underline_indicator: ^0.0.4
+  flutter_swiper_null_safety: ^1.0.2
+  flutter_staggered_grid_view: ^0.4.0
+  transparent_image: ^2.0.0
+  cached_network_image: ^3.0.0
+  lottie: ^1.0.1
 
 dev_dependencies:
   flutter_test:
