--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.4.0
   transparent_image: ^2.0.0
   cached_network_image: ^3.0.0
-  lottie: ^1.0.1
+  lottie: ^1.2.1
 
 dev_dependencies:
   flutter_test:
@@ -58,6 +58,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/
     - images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
