--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   transparent_image: ^2.0.0
   cached_network_image: ^3.0.0
   lottie: ^1.2.1
+  chewie: ^1.2.2
+  video_player: ^2.2.5
 
 dev_dependencies:
   flutter_test:
