--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   lottie: ^1.2.1
   chewie: ^1.2.2
   video_player: ^2.2.5
+  orientation: ^1.3.0
+  auto_orientation: ^2.1.0
 
 dev_dependencies:
   flutter_test:
