--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   video_player: ^2.2.5
   orientation: ^1.3.0
   auto_orientation: ^2.1.0
+  clipboard: ^0.1.3
+  url_launcher: ^6.0.13
+  collection: ^1.15.0
 
 dev_dependencies:
   flutter_test:
