--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   clipboard: ^0.1.3
   url_launcher: ^6.0.13
   collection: ^1.15.0
+  web_socket_channel: ^2.1.0
 
 dev_dependencies:
   flutter_test:
