feat: 完成HiOverlay实现弹幕发射功能

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   url_launcher: ^6.0.13
   collection: ^1.15.0
   web_socket_channel: ^2.1.0
+  flutter_overlay: ^1.0.0
 
 dev_dependencies:
   flutter_test:
