--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   collection: ^1.15.0
   web_socket_channel: ^2.1.0
   flutter_overlay: ^1.0.0
+  provider: ^6.0.1
 
 dev_dependencies:
   flutter_test:
