--- a/component/hi_video/pubspec.yaml
+++ b/component/hi_video/pubspec.yaml
@@ -1,7 +1,7 @@
 name: hi_video
 description: A new Flutter package project.
 version: 0.0.1
-homepage:
+homepage: " "
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
