--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,6 @@ dependencies:
   fluttertoast: ^8.0.8
   underline_indicator: ^0.0.4
   flutter_swiper_null_safety: ^1.0.2
-  flutter_staggered_grid_view: ^0.4.0
   transparent_image: ^2.0.0
   cached_network_image: ^3.0.0
   lottie: ^1.2.1
@@ -51,6 +50,7 @@ dependencies:
   web_socket_channel: ^2.1.0
   flutter_overlay: ^1.0.0
   provider: ^5.0.0 # for chewie 1.2.2
+  flutter_nested: ^1.0.0
 
 dev_dependencies:
   flutter_test:
