--- a/component/hi_video/pubspec.yaml
+++ b/component/hi_video/pubspec.yaml
@@ -10,6 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  chewie: ^1.2.2
+  video_player: ^2.2.5
 
 dev_dependencies:
   flutter_test:
