--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,8 @@ dependencies:
   flutter_staggered_grid_view: ^0.4.0
   transparent_image: ^2.0.0
   lottie: ^1.2.1
-  chewie: ^1.2.2
-  video_player: ^2.2.5
+  # chewie: ^1.2.2
+  # video_player: ^2.2.5
   orientation: ^1.3.0
   auto_orientation: ^2.1.0
   clipboard: ^0.1.3
