--- a/component/hi_video/pubspec.yaml
+++ b/component/hi_video/pubspec.yaml
@@ -11,7 +11,9 @@ dependencies:
   flutter:
     sdk: flutter
   chewie: ^1.2.2
+  orientation: ^1.3.0
   video_player: ^2.2.5
+  cached_network_image: ^3.0.0
 
 dev_dependencies:
   flutter_test:
