--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
     path: ./component/hi_base
   hi_cache:
     path: ./component/hi_cache
+  hi_video:
+    path: ./component/hi_video
   hi_barrage:
     path: ./component/hi_barrage
 
@@ -32,7 +34,6 @@ dependencies:
   lottie: ^1.2.1
   # chewie: ^1.2.2
   # video_player: ^2.2.5
-  orientation: ^1.3.0
   auto_orientation: ^2.1.0
   clipboard: ^0.1.3
   url_launcher: ^6.0.13
