--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,15 +32,18 @@ dependencies:
   flutter_swiper_null_safety: ^1.0.2
   transparent_image: ^2.0.0
   lottie: ^1.2.1
-  # chewie: ^1.2.2
-  # video_player: ^2.2.5
   auto_orientation: ^2.1.0
   clipboard: ^0.1.3
-  url_launcher: ^6.0.13
+  url_launcher: ^6.0.15
   collection: ^1.15.0
   flutter_overlay: ^1.0.0
-  provider: ^5.0.0 # for chewie 1.2.2
+  provider: ^5.0.0
   flutter_nested: ^1.0.0
+
+#解决依赖冲突
+dependency_overrides:
+  archive: 3.0.0
+  crypto: ^3.0.0
 
 dev_dependencies:
   flutter_test:
